--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "@mui/icons-material": "^5.16.14",
     "@mui/material": "^5.14.11",
     "@mui/x-date-pickers": "^6.16.2",
+    "@react-three/drei": "^9.99.4",
+    "@react-three/fiber": "^8.15.16",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-table": "^8.10.7",
+    "@types/three": "^0.175.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "express": "^4.21.2",
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.279.0",
     "notistack": "^3.0.2",
@@ -42,6 +46,8 @@
     "react-hook-form": "^7.47.0",
     "react-json-editor-ajrm": "^2.5.14",
     "react-router-dom": "^6.16.0",
+    "three": "^0.175.0",
+    "three-stdlib": "^2.35.14",
     "use-debounce": "^10.0.4",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
@@ -81,5 +87,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/username/r_wup.git"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
